--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title> Pratiyog'26 | Jeppiaar Engineering College</title>
-    <meta name="description" content="XENZO Pratiyog'26 - AI & ML Department Symposium at Jeppiaar Engineering College, Chennai" />
+    <title>Pratiyog'26 | Jeppiaar Engineering College</title>
+    <meta name="description" content="Pratiyog'26 - AI & ML Department Symposium at Jeppiaar Engineering College, Chennai" />
     <meta name="author" content="Jeppiaar Engineering College" />
     <meta property="og:title" content="Pratiyog'26" />
     <meta property="og:description" content="AI & ML Department Symposium at Jeppiaar Engineering College" />
